product_docs/docs/edb-postgres-ai/1.3/hybrid-manager/using_hybrid_manager/index.mdx
---
title: Using Hybrid Manager
description: Covers how to use Hybrid Manager, with topics organized by user responsibilities—general users and Kubernetes administrators.
indexCards: simple
navigation:
  - hm_terminology
  - hm_overview
  - '# For Users'
  - projects
  - cluster_management
  - estate
  - upgrading
  - migration
  - image-management
  - backup_restore
  - edbctl
  - using_the_api
  - '# For Kubernetes Administrators'
  - k8s_concepts
  - managing_users
  - byo_idp
  - monitoring
  - multi-dc
  - hadr
  - enabling_migration_copilot
  - kms_for_tde
  - common_scenarios
  - troubleshooting
---

This section helps you understand how to operate EDB Postgres AI Hybrid Manager (HM) across different use cases, from routine cluster management to high availability and disaster recovery.

The topics are structured by audience—starting with general platform users (application teams, database engineers, platform owners), and continuing to Kubernetes administrators responsible for cluster security, observability, and integrations.

---

## Where to start

Begin with the foundational sections:

- [Terminology](./hm_terminology) introduces key HM concepts.
- [Hybrid Manager overview](./hm_overview) provides essential context for Postgres, lakehouse, and AI workloads.

From there, explore topics based on your role and responsibilities.

---

## For users

These sections cover day-to-day tasks in Hybrid Manager:

- [Projects](./projects) — create, manage, and configure project-level settings including alerting and usage reporting.
- [Cluster Management](./cluster_management) — create, monitor, and manage Postgres clusters, including backups, query diagnostics, and templates.
- [Backup and Restore](./backup_restore) — manage backup schedules, restore points, and disaster recovery configurations.
- [EDBCTL](./edbctl) — use the CLI to automate deployment, configuration, and data operations.
- [API Access](./using_the_api) — automate platform functions with the HM API.
- [Upgrading](./upgrading) — follow procedures for major and minor upgrades of Postgres and PGD.
- [Migration](./migration) — run schema and data migrations from Oracle, RDS, or other Postgres installations.
- [Image Management](./image-management) — manage container images, repositories, and AI knowledge base assets.
- [Enable Migration Copilot](./enabling_migration_copilot) — unlock guided migration workflows with Copilot.

---

## For Kubernetes administrators

For those administering the infrastructure beneath Hybrid Manager:

- [Managing Users](./managing_users) — configure identity providers (native, LDAP, SAML) and access controls.
- [Monitoring](./monitoring) — set up agents, explore built-in dashboards, and extend observability with Prometheus and Grafana.
- [Multi-DC](./multi-dc) - set up two data centers, a primary and a secondary.
- [HA/DR](./hadr) — configure high availability and disaster recovery for production clusters.
- [KMS for TDE](./kms_for_tde) — integrate AWS, GCP, or HashiCorp Vault for external key management.
- [Troubleshooting](troubleshooting) — investigate and resolve issues across all platform areas.

---
