product_docs/docs/edb-postgres-ai/1.4/hybrid-manager/using_hybrid_manager/index.mdx
---
title: Using Hybrid Manager
description: Covers how to use Hybrid Manager, with topics organized by user responsibilities—general users and Kubernetes administrators.
indexCards: simple
navigation:
  - hm_terminology
  - hm_overview
  - '# For Users'
  - projects
  - cluster_management
  - estate
  - upgrading
  - migration
  - image-management
  - backup_restore
  - chat_agent
  - governance
  - edbctl
  - interacting_programmatically
  - idp_management
  - '# For Kubernetes Administrators'
  - k8s_concepts
  - managing_users
  - monitoring
  - upgrading_hm
  - hadr
  - enabling_migration_copilot
  - kms_for_tde
  - common_scenarios
  - troubleshooting
---

This section helps you understand how to operate EDB Postgres AI Hybrid Manager (HM) across different use cases, from routine cluster management to high availability and disaster recovery.

The topics are structured by audience—starting with general platform users (application teams, database engineers, platform owners), and continuing to Kubernetes administrators responsible for cluster security, observability, and integrations.

* * *

## Where to start

Begin with the foundational sections:

-   [Terminology](./hm_terminology) introduces key HM concepts.
-   [Hybrid Manager overview](./hm_overview) provides essential context for Postgres, Lakehouse, and AI workloads.

From there, explore topics based on your role and responsibilities.

* * *

## For users

These sections cover day-to-day tasks in Hybrid Manager:

-   [Projects](./projects) — create, manage, and configure project-level settings including alerting and usage reporting.
-   [Cluster Management](./cluster_management) — create, monitor, and manage Postgres clusters, including backups, query diagnostics, and templates.
-   [Backup and Restore](./backup_restore) — manage backup schedules, restore points, and disaster recovery configurations.
-   [EDBCTL](./edbctl) — use the CLI to automate deployment, configuration, and data operations.
-   [API Access](./interacting_programmatically) — automate platform functions with the HM API.
-   [Postgres database upgrades](./upgrading) - upgrade your HM-managed Postgres databases to the next minor or major version.
-   [Migration](./migration) — run schema and data migrations from Oracle, RDS, or other Postgres installations.
-   [Image Management](./image-management) — manage container images, repositories, and AI knowledge base assets.
-   [Enable Migration Copilot](./enabling_migration_copilot) — unlock guided migration workflows with Copilot.
-   [Chat Agent](./chat_agent) — operate Hybrid Manager in plain language: browse your estate, provision clusters, troubleshoot performance, and consult the docs.
-   [Governance](./governance) — audit and govern how AI agents interact with your Postgres data, reconstructing agent sessions and inspecting every SQL statement they run.

* * *

## For Kubernetes administrators

For those administering the infrastructure beneath Hybrid Manager:

-   [Managing Users](./managing_users) — configure native users.
-   [IdP management](./idp_management) — configure identity providers and rotate IdP connector encryption keys.
-   [Monitoring](./monitoring) — set up agents, explore built-in dashboards, and extend observability with Prometheus and Grafana.
-   [Multi-DC](/edb-postgres-ai/current/hybrid-manager/install/configuration/multi_dc/) - set up multiple data centers, a primary and secondary locations.
-   [Hybrid Manager upgrades](./upgrading_hm) - upgrade the HM platform to the next minor/major/innovation release version.
-   [HA/DR](./hadr) — configure high availability and disaster recovery for production clusters.
-   [Troubleshooting](troubleshooting) — investigate and resolve issues across all platform areas.

* * *
